--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,13 @@ body{
 .calendar-grid{
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+    
+}
+.dates-grid{
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(7, 1fr);
+
 }
 .day{
     text-align: center;
@@ -48,4 +54,7 @@ body{
 .date-picker-other-month-date:hover{
     background-color: rgb(240, 239, 241);
     
+}
+.selected{
+    background-color: crimson;
 }
